--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,8 @@ dmypy.json
 .history
 
 # End of https://www.gitignore.io/api/java,macos,python,visualstudiocode
+
+
+### Added
+# VisualStudioCode
+.vscode
